--- a/src/main/webapp/angular/preta/views/home.html
+++ b/src/main/webapp/angular/preta/views/home.html
@@ -19,11 +19,11 @@
 						<div class="row">
 							<div class="col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-0 col-lg-11 col-ms-11 col-sm-11 col-xs-12">
 								<h4 class="text-mainge">N'hésitez plus !</h4>
-								<a x-ui-sref="root.registration" x-ng-show="loggedUser == null" class="btn btn-mainge btn-flat center-block" style="margin-bottom: 4px;">M'inscrire</a>
+								<!-- <a x-ui-sref="root.registration" x-ng-show="loggedUser == null" class="btn btn-mainge btn-flat center-block" style="margin-bottom: 4px;">M'inscrire</a> -->
 								<!-- EShop Register -->
-								<a x-ui-sref="root.eshop-reg" class="btn btn-mainge btn-flat center-block" x-ng-show="loggedUser == null">Enregistrer ma boutique !</a>
+								<!-- <a x-ui-sref="root.eshop-reg" class="btn btn-mainge btn-flat center-block" x-ng-show="loggedUser == null">Enregistrer ma boutique !</a>
 								<a x-ui-sref="root.upgrade-request" x-ng-show="loggedUser != null && !loggedUser.isManager" class="btn btn-mainge btn-flat center-block">Enregistrer ma Boutique</a>
-								<a href="preta-manager#/e-shops" x-ng-show="loggedUser != null && loggedUser.isManager" class="btn btn-mainge btn-flat center-block">Enregistrer ma Boutique</a>
+								<a href="preta-manager#/e-shops" x-ng-show="loggedUser != null && loggedUser.isManager" class="btn btn-mainge btn-flat center-block">Enregistrer ma Boutique</a> -->
 							</div>
 						</div>
 					</div>
