--- a/src/main/webapp/angular/preta/views/shared/registration-conf.html
+++ b/src/main/webapp/angular/preta/views/shared/registration-conf.html
@@ -1,26 +1,26 @@
-<div class="col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-lg-6 col-md-6 col-sm-8 col-xs-12">
-
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+<div class="container-fluid">
+	<div class="col-lg-offset-3 col-md-offset-2 col-lg-6 col-md-8 col-sm-12 col-xs-12" style="min-height: 460px;">
 		<div class="row">
-			<div class="container-fluid">
-				<div class="default-panel animated bounceInUp">
-					<div class="default-panel-header">
-						<h4 class="title text-mainge"><i class="fa fa-user-plus"></i>&nbsp;Confirmation de l'inscription</h4>  <small>Compte créé !</small>
-					</div>
-					
-					<div class="defaut-panel-content">
-
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<div class="row">
-								<div class="container-fluid" style="margin-top: 12px;">
-									<p class="text-justify animated flash" style="text-indent: 30px; color: green; font-weight: 100%;">
-										Félicitations, votre compte a été créé avec succès ! Un e-mail de confirmation vous a été envoyé
-										à l'adresse mail indiquée. Veuillez cliquer sur le lien d'activation pour terminer votre procédure
-										d'inscription et vous connecter.
-									</p>
-									
-									<a x-ui-sref="root" class="btn p-btn-default center-block"><i class="fa fa-home"></i> Retour à l'accueil</a>
-								</div>
+			<div class="default-panel animated bounceInUp">
+			
+				<div class="default-panel-header">
+					<h4 class="title text-mainge"><i class="fa fa-user-plus"></i>&nbsp;Confirmation de l'inscription</h4>  <small>Compte créé !</small>
+				</div>
+				
+				<div class="defaut-panel-content">
+					<div layout-sm="column" layout-gt-sm="row" layout-padding>
+						<div flex-sm="100" flex-gt-sm="40">
+							<img x-ng-src="https://drive.google.com/uc?id=0B0W0ktANhIydRHQ4TUU1YjJ6c3M&amp;export=download" class="img-responsive product-img" />
+						</div>
+						<div flex-sm="100" flex-gt-sm="60">
+							<div class="container-fluid" style="margin-top: 12px;">
+								<p class="text-justify animated flash" style="text-indent: 30px; font-weight: 100%;">
+									Félicitations, votre compte a été créé avec succès ! Un e-mail de confirmation vous a été envoyé
+									à l'adresse mail indiquée. Veuillez cliquer sur le lien d'activation pour terminer votre procédure
+									d'inscription et vous connecter.
+								</p>
+								
+								<a x-ui-sref="root" class="btn p-btn-default center-block"><i class="fa fa-home"></i> Retour à l'accueil</a>
 							</div>
 						</div>
 					</div>
@@ -28,5 +28,4 @@
 			</div>
 		</div>
 	</div>
-		
 </div>
