--- a/src/main/webapp/angular/preta-manager/views/order/show.html
+++ b/src/main/webapp/angular/preta-manager/views/order/show.html
@@ -100,3 +100,138 @@
 		</div>
 	</div>
 </div>
+
+<div x-ba-panel x-ba-panel-title="Détails Commande #{{ entity.eShopRelId }} ( {{ entity.eShop.name }})" x-ba-panel-class="with-scroll">
+	<div layout="column" layout-align="space-around center" x-ng-show="isEntityLoading">
+		<md-progress-circular flex md-mode="indeterminate"></md-progress-circular>
+     		</div>
+		
+    <div layout="column" layout-align="center center" x-ng-if="!isEntityLoading && entity == null">
+		<div flex="auto">
+			<h3 class="md-title text-success"><i class="fa fa-circle-o-notch"></i>&nbsp;<b>Désolé, pas de contenu à afficher</b></h3>
+		</div>
+    </div>
+    
+    <div layout="column" layout-align="start">
+		<div layout-gt-xs="row" layout-xs="column" flex layout-wrap>
+			<md-input-container class="md-block" flex>
+	            <label>Id Absolu</label>
+	            <input value="{{ entity.id | number }}" readonly />
+            </md-input-container>
+            <md-input-container class="md-block" flex>
+	            <label>Id Relatif Acheteur</label>
+	            <input ng-model="entity.buyerRelId" readonly />
+            </md-input-container>
+            <md-input-container class="md-block" flex>
+	            <label>Id Relatif Boutique</label>
+	            <input ng-model="entity.eShopRelId" readonly />
+            </md-input-container>
+		</div>
+		
+		<div layout-gt-xs="row" layout-xs="column" flex>
+            <md-input-container class="md-block" flex>
+	            <label>Acheteur</label>
+	            <input ng-model="entity.buyer.username" readonly />
+            </md-input-container>
+            <md-input-container class="md-block" flex>
+	            <label>Date Enregistrement</label>
+	            <input value="{{ entity.regDate | date: 'medium' }}" readonly />
+            </md-input-container>
+        </div>
+        
+		<div layout="row" flex>
+            <md-input-container class="md-block" flex>
+	            <label>E-Boutique</label>
+	            <input value="{{ entity.eShop.name }}" readonly />
+            </md-input-container>
+        </div>
+        
+		<div layout="row" flex layout-margin>
+			<div flex>
+	            <label>Statut</label>
+	            <order-status status="entity.status" />
+			</div>
+        </div>
+        
+		<div layout-gt-xs="row" layout-xs="column" flex>
+            <md-input-container class="md-block" flex x-ng-show="entity.deliveryDate != null">
+	            <label>Début Livraison</label>
+	            <input value="{{ entity.deliveryDate | date: 'medium' }}" readonly />
+            </md-input-container>
+            <md-input-container class="md-block" flex x-ng-show="entity.receptionDate != null">
+	            <label>Réception</label>
+	            <input value="{{ entity.receptionDate | date: 'medium' }}" readonly />
+            </md-input-container>
+        </div>
+        
+		<div layout="row" flex x-ng-show="entity.packageId != null">
+			<md-input-container class="md-block" flex>
+	            <label>N° Colis</label>
+	            <input value="{{ entity.packageId }}" readonly />
+            </md-input-container>
+		</div>
+	</div>
+	
+	<h4 class="special-header text-success">Articles commandés</h4>
+	
+	<div layout="column">
+		<div layout-sm="column" layout-gt-sm="row" ng-repeat="ordArt in entity.orderedArticles" layout-padding>
+			<div flex="none">
+				<img x-ng-src="https://drive.google.com/uc?id={{ ordArt.article.pictures[0].googleId }}&export=download"
+					class="img-responsive img-thumbnail center-block"
+					style="width: 60px; height: 60px;" />
+			</div>
+			<div flex="auto">
+	            <md-input-container class="md-block" flex layout-align="start stretch">
+		            <label>Article</label>
+		            <input value="{{ ordArt.article.name}}" readonly class="text-right" />
+	            </md-input-container>
+			</div>
+			<div flex layout-align="start stretch">
+	            <md-input-container class="md-block" flex>
+		            <label>Prix Unitaire</label>
+		            <input value="{{ ordArt.article.price | number }} F CFA" readonly class="text-right" />
+	            </md-input-container>
+			</div>
+			<div flex layout-align="start stretch" x-ng-show="ordArt.article.deliveryFee > 0">
+	            <md-input-container class="md-block" flex>
+		            <label>Livr.</label>
+		            <input value="{{ ordArt.article.deliveryFee | number }} F CFA" readonly class="text-right" />
+	            </md-input-container>
+			</div>
+			<div flex layout-align="start stretch">
+	            <md-input-container class="md-block" flex>
+		            <label>Quantité</label>
+		            <input value="{{ ordArt.quantity | number }}" readonly  class="text-right" />
+	            </md-input-container>
+			</div>
+			<div flex layout-align="start stretch">
+	            <md-input-container class="md-block" flex>
+		            <label>Total</label>
+		            <input value="{{ ( (ordArt.article.price + ordArt.article.deliveryFee) * ordArt.quantity) | number  }} F CFA" readonly class="text-right" />
+	            </md-input-container>
+			</div>
+		</div>
+		
+		<div flex layout-align="start center" layout="row" layout-padding>
+            <md-input-container class="md-block" flex layout-align="start stretch">
+	            <label>Total</label>
+	            <input value="{{ entity.total | number }} F CFA" readonly class="text-right" />
+            </md-input-container>
+		</div>
+	</div>
+	
+	<div layout="row" layout-align="start center">
+		<div>
+			<md-button class="md-raised" x-ui-sref="root.orders" x-ui-sref-options="{ reload: true}" >
+				<i class="fa fa-arrow-circle-left"></i><span class="hidden-xs">&nbsp;Retour</span>
+			</md-button>
+		</div>
+		<div flex></div>
+		<div>
+			<md-button class="md-raised md-primary md-mini">
+				Régler <i class="fa fa-money"></i>
+			</md-button>
+		</div>
+	</div>
+</div>
