--- a/src/main/webapp/angular/preta/views/order/checkout.html
+++ b/src/main/webapp/angular/preta/views/order/checkout.html
@@ -120,10 +120,11 @@
 											<h4><b>Paiement</b></h4>
 										
 											<div layout="row" layout-align="space-between" layout-margin>
-												<span flex>
+												<span>
 													<label>Montant total</label>
 												</span>
-												<span class="text-mainge" flex><b>{{ total | number}}</b>  F CFA</span>
+												<span flex></span>
+												<span class="text-mainge"><b>{{ total | number}}</b> F CFA</span>
 											</div>
 										
 											<form>
