--- a/src/main/webapp/angular/preta-admin/theme/components/pageTop/pageTop.html
+++ b/src/main/webapp/angular/preta-admin/theme/components/pageTop/pageTop.html
@@ -1,5 +1,5 @@
 <div class="page-top clearfix" scroll-position="scrolled" max-height="50" ng-class="{'scrolled': scrolled}">
-  <a x-ui-sref="root" class="al-logo clearfix"><span>Admin</span>Hôbossa</a>
+  <a x-ui-sref="root" class="al-logo clearfix"><span>A<span class="hide-xs">dmin</span></span>Hôbossa</a>
   <a class="collapse-menu-link ion-navicon" ba-sidebar-toggle-menu></a>
   
   <div class="user-profile clearfix">
