--- a/src/main/webapp/angular/preta/views/sandbox.html
+++ b/src/main/webapp/angular/preta/views/sandbox.html
@@ -1,3 +1,28 @@
 <div class="main-container">
-	<img ng-src="source" />
+	<table style="width: 100%;">
+		<tr>
+			<th>IsLoading</th>
+			<td>{{ isLoading }}</td>
+		</tr>
+		<tr>
+			<th>URL</th>
+			<td>{{ picture.url }}</td>
+		</tr>
+		<tr>
+			<th>DATA</th>
+			<td>{{ picture.data }}</td>
+		</tr>
+		<tr>
+			<th>Test</th>
+			<td>
+				<img ng-src="{{ picture.data }}" class="img-responsive" />
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<button ng-click="load()">Load</button>
+				<button ng-click="reset()">Reset</button>
+			</td>
+		</tr>
+	</table>
 </div>
