--- a/src/main/webapp/angular/preta-manager/views/order/show.html
+++ b/src/main/webapp/angular/preta-manager/views/order/show.html
@@ -1,106 +1,3 @@
-<div x-ba-panel x-ba-panel-title="Détails Commande #{{ entity.id }}" x-ba-panel-class="with-scroll">
-	<table class="table table-hover">
-		<tbody>
-			<tr>
-				<td class="header-cell">Id</td>
-				<td>{{ entity.id }}</td>
-			</tr>
-			<tr>
-				<td class="header-cell">Date</td>
-				<td>{{ entity.regDate | date: 'medium' }}</td>
-			</tr>
-			<tr>
-				<td class="header-cell">Auteur</td>
-				<td>{{ entity.buyer.username }}</td>
-			</tr>
-			<tr>
-				<td class="header-cell">Statut</td>
-				<td><order-status x-status="entity.status" /></td>
-			</tr>
-			<tr x-ng-show="entity.deliveryDate != null">
-				<td class="header-cell">Date début livraison</td>
-				<td>{{ entity.deliveryDate | date: 'medium' }}</td>
-			</tr>
-		</tbody>
-	</table>
-	
-	<h4 class="special-header">Articles commandés</h4>
-	
-	<table class="table table-hovered">
-		<thead>
-			<tr>
-				<th colspan="2">Article</th>
-				<td class="text-right">Prix</td>
-				<td class="text-right">Quantité</td>
-				<td class="text-right">Total</td>
-			</tr>
-		</thead>
-		<tbody>
-			<tr x-ng-repeat="orderedArticle in entity.orderedArticles">
-				<td class="text-left">
-					<img x-ng-src="rest/article/fetchDefaultPic/{{ orderedArticle.article.id }}" style=" height: 128px;" class="img-responsive img-thumbnail center-block" />
-				</td>
-				<td style="vertical-align: middle;">
-					<b>{{ orderedArticle.article.name}}</b>
-					<p>
-						<span x-ng-repeat="orderedArticleFeature in orderedArticle.orderedArticleFeatures">
-							<label>{{ orderedArticleFeature.feature.label }}</label>
-							<span class="badge label-default" x-ng-repeat="featureValue in orderedArticleFeature.featureValues">
-									{{ featureValue.value }}
-							</span>
-						</span>
-					</p>
-				</td>
-				<td class="text-right" style="vertical-align: middle;">
-					{{ orderedArticle.article.price }} F CFA
-				</td>
-				<td class="text-right" style="vertical-align: middle;">
-					{{ orderedArticle.quantity }}
-				</td>
-				<td class="text-right" style="vertical-align: middle;">
-					{{ orderedArticle.article.price * orderedArticle.quantity }} F CFA
-				</td>
-			</tr>
-		</tbody>
-		<tfoot>
-			<tr>
-				<td colspan="4" class="text-right">
-					<b>Total</b>
-				</td>
-				<td class="text-right"><b>{{ entity.total }} F CFA</b></td>
-			</tr>
-		</tfoot>
-	</table>
-	
-	<div x-ng-show="entity.status == 'PAID'">
-		<h4 class="special-header">Livraison</h4>
-		<form>
-			<div layout="row">
-				<md-input-container flex>
-					<label>N° Du Colis</label>
-					<input type="text" required x-ng-model="entity.packageId" />
-				</md-input-container>
-				<span class="alert alert-dange" x-ng-show="formError.invalidPackageId">
-					Veuillez entrer un numéro de colis valide.
-				</span>
-			</div>
-		</form>
-	</div>
-	
-	<div style="margin-top: 32px;">
-		<div class="pull-left">
-			<md-button class="md-raised" x-ui-sref="root.orders">
-				<i class="fa fa-arrow-circle-left"></i> Retour
-			</md-button>
-		</div>
-		<div class="pull-right" x-ng-if="entity.status == 'PAID'">
-			<md-button class="md-raised md-primary" x-ng-click="deliverEntity()">
-				<span class="blink blink-infinite blink-furiously">Livrer</span> <i class="fa fa-truck"></i>
-			</md-button>
-		</div>
-	</div>
-</div>
-
 <div x-ba-panel x-ba-panel-title="Détails Commande #{{ entity.eShopRelId }} ( {{ entity.eShop.name }})" x-ba-panel-class="with-scroll">
 	<div layout="column" layout-align="space-around center" x-ng-show="isEntityLoading">
 		<md-progress-circular flex md-mode="indeterminate"></md-progress-circular>
@@ -108,23 +5,19 @@
 		
     <div layout="column" layout-align="center center" x-ng-if="!isEntityLoading && entity == null">
 		<div flex="auto">
-			<h3 class="md-title text-success"><i class="fa fa-circle-o-notch"></i>&nbsp;<b>Désolé, pas de contenu à afficher</b></h3>
+			<h3 class="md-title text-primary"><i class="fa fa-circle-o-notch"></i>&nbsp;<b>Désolé, pas de contenu à afficher</b></h3>
 		</div>
     </div>
     
-    <div layout="column" layout-align="start">
+    <div layout="column" layout-align="start" x-ng-if="!isEntityLoading && entity != null">
 		<div layout-gt-xs="row" layout-xs="column" flex layout-wrap>
 			<md-input-container class="md-block" flex>
-	            <label>Id Absolu</label>
-	            <input value="{{ entity.id | number }}" readonly />
+	            <label>Id</label>
+	            <input value="{{ entity.eShopRelId | number }}" readonly />
             </md-input-container>
             <md-input-container class="md-block" flex>
-	            <label>Id Relatif Acheteur</label>
-	            <input ng-model="entity.buyerRelId" readonly />
-            </md-input-container>
-            <md-input-container class="md-block" flex>
-	            <label>Id Relatif Boutique</label>
-	            <input ng-model="entity.eShopRelId" readonly />
+	            <label>E-Boutique</label>
+	            <input value="{{ entity.eShop.name }}" readonly />
             </md-input-container>
 		</div>
 		
@@ -134,15 +27,8 @@
 	            <input ng-model="entity.buyer.username" readonly />
             </md-input-container>
             <md-input-container class="md-block" flex>
-	            <label>Date Enregistrement</label>
+	            <label>Date Commande</label>
 	            <input value="{{ entity.regDate | date: 'medium' }}" readonly />
-            </md-input-container>
-        </div>
-        
-		<div layout="row" flex>
-            <md-input-container class="md-block" flex>
-	            <label>E-Boutique</label>
-	            <input value="{{ entity.eShop.name }}" readonly />
             </md-input-container>
         </div>
         
@@ -163,8 +49,8 @@
 	            <input value="{{ entity.receptionDate | date: 'medium' }}" readonly />
             </md-input-container>
         </div>
-        
-		<div layout="row" flex x-ng-show="entity.packageId != null">
+		
+		<div layout="row" flex x-ng-show="entity.status != 'PAID'">
 			<md-input-container class="md-block" flex>
 	            <label>N° Colis</label>
 	            <input value="{{ entity.packageId }}" readonly />
@@ -221,16 +107,31 @@
 		</div>
 	</div>
 	
+    <div x-ng-show="entity.status == 'PAID'">
+		<h4 class="special-header">Livraison</h4>
+		<form>
+			<div layout="row">
+				<md-input-container flex>
+					<label>N° Du Colis</label>
+					<input type="text" required x-ng-model="entity.packageId" />
+				</md-input-container>
+				<span class="alert alert-dange" x-ng-show="formError.invalidPackageId">
+					Veuillez entrer un numéro de colis valide.
+				</span>
+			</div>
+		</form>
+	</div>
+		
 	<div layout="row" layout-align="start center">
 		<div>
-			<md-button class="md-raised" x-ui-sref="root.orders" x-ui-sref-options="{ reload: true}" >
-				<i class="fa fa-arrow-circle-left"></i><span class="hidden-xs">&nbsp;Retour</span>
+			<md-button class="md-raised" x-ui-sref="root.orders">
+				<i class="fa fa-arrow-circle-left"></i> Retour
 			</md-button>
 		</div>
 		<div flex></div>
 		<div>
-			<md-button class="md-raised md-primary md-mini">
-				Régler <i class="fa fa-money"></i>
+			<md-button class="md-raised md-primary" x-ng-click="deliverEntity()" x-ng-if="entity.status == 'PAID'">
+				<span class="blink blink-infinite blink-furiously">Livrer</span> <i class="fa fa-truck"></i>
 			</md-button>
 		</div>
 	</div>
